# mpv-menu-plugin

./: .clang-format  CMakeLists.txt  README.md  menu.rc.in
.github/workflows/: build.yml
cmake/: GetGitVersion.cmake
lua/: dialog.lua  dyn_menu.lua  menu_items.lua
mpv/misc/: bstr.c  dispatch.h  node.c  node.h
src/: clipboard.c  clipboard.h  dialog.c  dialog.h  menu.c  menu.h  plugin.c  plugin.h  types.c  types.h
src/common/: common.c  common.h
src/lua/: dialog.lua  dyn_menu.lua
src/misc/: bstr.c  bstr.h
src/mpv/misc/: dispatch.c  dispatch.h
src/mpv/osdep/: threads-win32.h  threads.h
src/mpv/ta/: ta.c
src/ta/: ta_utils.c
